fix spotbugs errors